2013-06-02  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (CancelSynchronousIo): Define.
	* fcntl.cc (fcntl64): Drop handling of locking commands.
	* fhandler.h (class fhandler_disk_file): Add mandatory_locking.
	(fhandler_disk_file::fcntl): Declare.
	(fhandler_disk_file::mand_lock): Declare.
	* fhandler_disk_file.cc (fhandler_disk_file::fhandler_disk_file):
	Initialize mandatory_locking.
	(fhandler_disk_file::fcntl): New method.  Handle F_LCK_MANDATORY and
	locking commands.
	(fhandler_disk_file::dup): Duplicate mandatory_locking.  Fix a bug
	when duplicating prw_handle failed.
	(fhandler_disk_file::fixup_after_fork): Reset mandatory_locking.
	* flock.cc (fhandler_disk_file::lock): Add comment.
	(struct lock_parms): New struct to pass parameters to blocking_lock_thr
	thread function.
	(blocking_lock_thr): New thread function.
	(fhandler_disk_file::mand_lock): New methof implementing mandatory
	locking with Windows semantics.
	* ntdll.h (NtLockFile): Declare.
	(NtUnlockFile): Declare.
	* include/fcntl.h: Fix a comment.
	(F_LCK_MANDATORY): Define.  Add lengthy comment to explain.

2013-06-02  Corinna Vinschen  <corinna@vinschen.de>

	*  exceptions.cc (exception::handle): Resurrect accidentally lost
	patch from 2009-07-22: Set si_addr according to POSIX for SIGSEGV.

2013-05-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/socket.h: Move SHUT_xx definitions from here...
	* include/cygwin/socket.h: ...to here.

2013-05-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/if.h: Include cygwin/socket.h rather than sys/socket.h
	to avoid circular dependency resulting in bogus compile time warnings.

2013-05-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_procsys.cc (fhandler_procsys::read): Just call
	fhandler_base::raw_read from here.  Drop comment.
	(fhandler_procsys::write): Drop comment.

2013-05-27  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::topsort): Fix early-return condition to